# trading-web-project

./: .env.example  .gitignore  Dockerfile  PROJECT_BLUEPRINT.md  PROJECT_BLUEPRINT_TRADING_APP.md  README.md  deploy.sh  docker-compose.yml  prompt-Alembic.md  prompt-Librarian-api.md  prompt-Nginx.md  prompt-React.md  prompt-documenting.md  prompt-main.md  prompt.md  pyproject.toml  wait-for.sh
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_initial_migration_with_core_tables.py
app/api/: deps.py
app/core/: config.py
app/crud/: crud_conversation.py  crud_transaction.py  crud_user.py
app/db/: session.py
app/models/: conversation.py  portfolio.py  user.py
app/schemas/: ai.py  token.py  user.py
tests/: test_auth_api.py
tests/mocks/librarian/api/v1/: chat
trading_app/app/: main.py
trading_app/app/api/v1/: ai.py  auth.py
trading_app/app/clients/: librarian.py
trading_app/app/core/: config.py  security.py
trading_app/app/schemas/: transaction.py
trading_app/tests/: conftest.py  test_ai_api.py  test_main.py
